begin rebuilding cue loading based on the new cue compiling system

--- a/BizHawk.Emulation.DiscSystem/BizHawk.Emulation.DiscSystem.csproj
+++ b/BizHawk.Emulation.DiscSystem/BizHawk.Emulation.DiscSystem.csproj
@@ -71,7 +71,8 @@
     <Compile Include="cdfs\ISONode.cs" />
     <Compile Include="cdfs\ISONodeRecord.cs" />
     <Compile Include="cdfs\ISOVolumeDescriptor.cs" />
-    <Compile Include="CUE\CUE_Analyze.cs" />
+    <Compile Include="CUE\CueFileResolver.cs" />
+    <Compile Include="CUE\CUE_Compile.cs" />
     <Compile Include="CUE\CUE_Format.cs" />
     <Compile Include="CUE\CUE_Load.cs" />
     <Compile Include="CUE\CUE_Parse.cs" />
