apply major discsystem refactorings to emulator cores and client. lots of undone things, most notably generalized RawTOCEntries -> TOCRaw -> Structure synthesis outside of the individual format/api disc loaders. IOW there's no DiscStructure right now.  Probably lots of bugs too.

--- a/BizHawk.Emulation.DiscSystem/BizHawk.Emulation.DiscSystem.csproj
+++ b/BizHawk.Emulation.DiscSystem/BizHawk.Emulation.DiscSystem.csproj
@@ -52,9 +52,9 @@
     </Compile>
     <Compile Include="API\Disc.API.cs" />
     <Compile Include="API\Disc.ID.cs" />
+    <Compile Include="API\DiscHasher.cs" />
     <Compile Include="API\DiscSectorReader.cs" />
     <Compile Include="API\DiscStream.cs" />
-    <Compile Include="API\OldHash.cs" />
     <Compile Include="Blobs\Blob_ECM.cs" />
     <Compile Include="Blobs\Blob_RawFile.cs" />
     <Compile Include="Blobs\Blob_WaveFile.cs" />
