--- a/BizHawk.Emulation.DiscSystem/BizHawk.Emulation.DiscSystem.csproj
+++ b/BizHawk.Emulation.DiscSystem/BizHawk.Emulation.DiscSystem.csproj
@@ -50,10 +50,9 @@
     <Compile Include="..\Version\VersionInfo.cs">
       <Link>VersionInfo.cs</Link>
     </Compile>
-    <Compile Include="API\Disc.API.cs" />
-    <Compile Include="API\Disc.ID.cs" />
     <Compile Include="API\DiscExceptions.cs" />
     <Compile Include="API\DiscHasher.cs" />
+    <Compile Include="API\DiscIdentifier.cs" />
     <Compile Include="API\DiscSectorReader.cs" />
     <Compile Include="API\DiscStream.cs" />
     <Compile Include="Blobs\Blob_ECM.cs" />
@@ -63,7 +62,6 @@
     <Compile Include="Blobs\IBlob.cs" />
     <Compile Include="Blobs\RiffMaster.cs" />
     <Compile Include="CCD_format.cs" />
-    <Compile Include="CDAudio.cs" />
     <Compile Include="cdfs\EndianBitConverter.cs" />
     <Compile Include="cdfs\ISODirectoryNode.cs" />
     <Compile Include="cdfs\ISOFile.cs" />
@@ -102,10 +100,6 @@
     <ProjectReference Include="..\BizHawk.Common\BizHawk.Common.csproj">
       <Project>{866f8d13-0678-4ff9-80a4-a3993fd4d8a3}</Project>
       <Name>BizHawk.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BizHawk.Emulation.Common\BizHawk.Emulation.Common.csproj">
-      <Project>{E1A23168-B571-411C-B360-2229E7225E0E}</Project>
-      <Name>BizHawk.Emulation.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
