--- a/BizHawk.Emulation.DiscSystem/BizHawk.Emulation.DiscSystem.csproj
+++ b/BizHawk.Emulation.DiscSystem/BizHawk.Emulation.DiscSystem.csproj
@@ -93,12 +93,14 @@
     <Compile Include="Internal\Algorithms\ECM.cs" />
     <Compile Include="Internal\Algorithms\GPL_ECM.cs" />
     <Compile Include="Internal\Algorithms\SubQ_CRC.cs" />
+    <Compile Include="Internal\Jobs\ApplySBIJob.cs" />
     <Compile Include="Internal\Jobs\LoadSBIJob.cs" />
     <Compile Include="Internal\Jobs\Synthesize_A0A1A2_Job.cs" />
     <Compile Include="Internal\Jobs\Synthesize_DiscStructure_From_DiscTOC_Job.cs" />
     <Compile Include="Internal\Jobs\Synthesize_DiscTOC_From_RawTOCEntries_Job.cs" />
     <Compile Include="Internal\Jobs\Synthesize_Leadout_Job.cs" />
     <Compile Include="Internal\SectorSynth.cs" />
+    <Compile Include="Internal\SynthUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
